# cellranger-snakemake

./: .gitignore  ARC_CONFIG_README.md  CLAUDE.md  MANIFEST.in  README.md  __init__.py  asdf.yaml  config_templates.py  environment.yaml  environment_lock_linux.yaml  environment_lock_portable.yaml  environment_mini.yaml  environment_no_builds.yaml  environment_portable.yaml  pyproject.toml  setup.py  snakemake-run-cellranger.py
ARC/: cellrangerARC.smk
cellranger_snakemake/: cli.py  config_generator.py  config_templates.py  config_validator.py
cellranger_snakemake/schemas/: __init__.py  annotation.py  base.py  cellranger.py  config.py  demultiplexing.py  doublet_detection.py
cellranger_snakemake/utils/: __init__.py  custom_logger.py  logger.py  test_data_generator.py  utils.py  version_check.py
cellranger_snakemake/workflows/: __init__.py  main.smk  workflow.py
cellranger_snakemake/workflows/ARC/: cellrangerARC.smk
cellranger_snakemake/workflows/ATAC/: cellrangerATAC.smk
cellranger_snakemake/workflows/GEX/: cellrangerGEX.smk
cellranger_snakemake/workflows/envs/: scvi-tools.yaml  snapatac2.yaml
cellranger_snakemake/workflows/rules/: batch_aggregation.smk  cellranger.smk  celltype_annotation.smk  demultiplexing.smk  doublet_detection.smk  object_creation.smk
cellranger_snakemake/workflows/scripts/: aggregate_batch.py  build_targets.py  create_arc_mudata.py  create_atac_anndata.py  create_gex_anndata.py  merge_metadata.py  parse_config.py  run_celltypist.py  run_decoupler_markers.py  run_scanvi.py  run_scrublet.py  run_solo.py
docs/: requirements.txt
docs/source/: PBMC_1K_ATAC.md  PBMC_3k_multiome.md  PBMC_GEX.md  conf.py  development.md  faq.md  index.md  installation.md  quickstart.md  tutorial.md
sc_preprocess/: cli.py  config_generator.py  config_validator.py
sc_preprocess/schemas/: cellranger.py  config.py  demultiplexing.py
sc_preprocess/utils/: custom_logger.py  test_data_generator.py  utils.py  version_check.py
sc_preprocess/workflows/: __init__.py  workflow.py
sc_preprocess/workflows/rules/: batch_aggregation.smk  cellranger.smk  demultiplexing.smk  doublet_detection.smk  object_creation.smk
sc_preprocess/workflows/scripts/: aggregate_batch.py  build_targets.py  create_arc_mudata.py  create_atac_anndata.py  parse_config.py
tests/: .gitignore  ARC_default_config_filled_out.yaml  ATAC_default_config_filled_out.yaml  GEX_default_config_filled_out.yaml  README.md  genome_names.txt  libraries_list_ARC.tsv  libraries_list_ATAC.tsv  libraries_list_GEX.tsv  test.sh
tests/notebooks/: PBMC_1k_ATAC_analysis.ipynb  PBMC_1k_GEX_analysis.ipynb  PBMC_3k_multiome_analysis.ipynb
