[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cellranger-snakemake"
version = "2.0.0"
authors = [
    {name = "Matthew S. Schechter", email = "mschechter@uchicago.edu"},
]
description = "Snakemake wrapper for single-cell preprocessing workflows"
requires-python = ">=3.7"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=5.1",
    "rich>=10.0",  # Optional but recommended for better UX
]

[project.scripts]
snakemake-run-cellranger = "cellranger_snakemake.cli:main"
sc-preprocess = "cellranger_snakemake.cli:main"  # Alias for new unified pipeline
sc-config-init = "cellranger_snakemake.config_generator:main"
sc-config-validate = "cellranger_snakemake.config_validator:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
# This is equivalent to find_packages() with no arguments

[tool.setuptools.package-data]
"cellranger_snakemake" = ["workflows/**/*.smk", "workflows/**/*.py"]
"cellranger_snakemake.workflows.ARC" = ["*.smk"]
"cellranger_snakemake.workflows.ATAC" = ["*.smk"]
"cellranger_snakemake.workflows.GEX" = ["*.smk"]