[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cellranger-snakemake"
version = "0.1.0-dev"
authors = [
    {name = "Matthew S. Schechter", email = "mschechter@uchicago.edu"},
]
description = "Snakemake wrapper for single-cell preprocessing workflows"
requires-python = ">=3.7"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=5.1",
    "rich>=10.0",  # Optional but recommended for better UX
    "packaging>=20.0",  # For version comparison
    # Phase 0: AnnData/MuData refactor dependencies
    "scanpy>=1.10",
    "anndata>=0.10",
    "muon>=0.1.6",
    "snapatac2>=2.6",
    "scvi-tools>=1.1",
    "celltypist>=1.6",
    "decoupler>=1.7",
    "scrublet>=0.2.3",
    "leidenalg",
]

[project.scripts]
snakemake-run-cellranger = "cellranger_snakemake.cli:main"
sc-preprocess = "cellranger_snakemake.cli:main"  # Alias for new unified pipeline
sc-config-init = "cellranger_snakemake.config_generator:main"
sc-config-validate = "cellranger_snakemake.config_validator:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
# This is equivalent to find_packages() with no arguments

[tool.setuptools.package-data]
"cellranger_snakemake" = ["workflows/**/*.smk", "workflows/**/*.py"]
"cellranger_snakemake.workflows.ARC" = ["*.smk"]
"cellranger_snakemake.workflows.ATAC" = ["*.smk"]
"cellranger_snakemake.workflows.GEX" = ["*.smk"]